Usa trasmettitore.